small fixes
- When editing comment in behave, old comment is not visible anymore
- behave lines scroll to show the one you're working on
- detection box switches from left to right of mouse pointer in order to always stay on screen

--- a/src/viewer/detectionbardetections.module.css
+++ b/src/viewer/detectionbardetections.module.css
@@ -84,8 +84,13 @@
     display: none;
   }
   &.active {
-    top: calc(var(--y) + 1.3em);
-    left: calc(var(--x) + 1.3em);
+    bottom: calc(100% - var(--y) + 1.3em);
+    &:not(.rightside) {
+      left: calc(var(--x) + 1.3em);
+    }
+    &.rightside {
+      right: calc(100% - var(--x) + 1.3em);
+    }
     background-color: hsl(140, 60%, 90%);
     padding: .3em;
     border: 1px solid hsl(140, 60%, 30%);
